--- a/retiro.html
+++ b/retiro.html
@@ -11,19 +11,22 @@
     <div class="container">
         <div class="left-column">
             <img src="img/imagenbanco.JPG" alt="Imagen Izquierda">
-            <p>El Banco Mundial tiene un conjunto de servicios a su disposición. Seleccione la opcion de transacción que desea retirar.</p>
+            <p>Seleccione la opción del valor que desea retirar</p>
         </div>
         <div class="right-column">
             
             <div class="button-group">
                 <div class="button-column">
-                   <a href="retiro.html"> <button type="button" class="btn btn-primary">Realizar retiro</button></a>
-                    <button type="button" class="btn btn-primary">Consultar saldo</button>
+                    <button type="button" class="btn btn-primary">20.000</button>
+                    <button type="button" class="btn btn-primary">50.000</button>
+                    <button type="button" class="btn btn-primary">80.000</button>
+                    <a href="index.html"><button type="button" class="btn btn-secondary">Cancelar</button></a>
                 </div>
                 <div class="button-column">
-                    <button type="button" class="btn btn-primary">Cambiar clave</button>
-                    <button type="button" class="btn btn-primary">Otros servicios</button>
-                    <a href="index.html"><button type="button" class="btn btn-secondary">Cancelar</button></a>
+                    <button type="button" class="btn btn-primary">120.000</button>
+                    <button type="button" class="btn btn-primary">250.000</button>
+                    <button type="button" class="btn btn-primary">400.000</button>
+                    <a href="otro_valor.html"><button type="button" class="btn btn-secondary">Digite otro valor</button></a>
                 </div>
             </div>
         </div>
