creación cambio de clave, su resultado y saldo

--- a/operaciones.html
+++ b/operaciones.html
@@ -18,10 +18,10 @@
             <div class="button-group">
                 <div class="button-column">
                    <a href="retiro.html"> <button type="button" class="btn btn-primary">Realizar retiro</button></a>
-                    <button type="button" class="btn btn-primary">Consultar saldo</button>
+                    <a href="resultado_saldo.html"><button type="button" class="btn btn-primary">Consultar saldo</button></a>
                 </div>
                 <div class="button-column">
-                    <button type="button" class="btn btn-primary">Cambiar clave</button>
+                   <a href="cambio_clave.html"> <button type="button" class="btn btn-primary">Cambiar clave</button></a>
                     <button type="button" class="btn btn-primary">Otros servicios</button>
                     <a href="index.html"><button type="button" class="btn btn-secondary">Cancelar</button></a>
                 </div>
