--- a/retiro.html
+++ b/retiro.html
@@ -17,15 +17,15 @@
             
             <div class="button-group">
                 <div class="button-column">
-                    <button type="button" class="btn btn-primary">20.000</button>
-                    <button type="button" class="btn btn-primary">50.000</button>
-                    <button type="button" class="btn btn-primary">80.000</button>
+                    <a href="clave.html">    <button type="button" class="btn btn-primary">20.000</button></a>
+                    <a href="clave.html">   <button type="button" class="btn btn-primary">50.000</button></a>
+                    <a href="clave.html">    <button type="button" class="btn btn-primary">80.000</button></a>
                     <a href="index.html"><button type="button" class="btn btn-secondary">Cancelar</button></a>
                 </div>
                 <div class="button-column">
-                    <button type="button" class="btn btn-primary">120.000</button>
-                    <button type="button" class="btn btn-primary">250.000</button>
-                    <button type="button" class="btn btn-primary">400.000</button>
+                    <a href="clave.html"> <button type="button" class="btn btn-primary">120.000</button></a>
+                    <a href="clave.html">   <button type="button" class="btn btn-primary">250.000</button></a>
+                    <a href="clave.html"><button type="button" class="btn btn-primary">400.000</button></a>
                     <a href="otro_valor.html"><button type="button" class="btn btn-secondary">Digite otro valor</button></a>
                 </div>
             </div>
